Adding certificate module
